--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ RewriteRule ^geo/(/?)+$ index.php?action_skin_change=yes&amp;skin_name=theme_geo
 </div>
 <!-- /ინსტრუქციები -->
      <!-- ReadMore ინტეგრაცია -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/readmore.js"></script>
     <script>
         $('article').readmore({
@@ -622,7 +622,7 @@ RewriteRule ^geo/(/?)+$ index.php?action_skin_change=yes&amp;skin_name=theme_geo
         });
     </script>
 
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="js/popper.min.js"></script>
