--- a/demo/readmore/index.html
+++ b/demo/readmore/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ReadMore.Js V1.0 | Ticcix</title>
     <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-boxo/css/bpg-boxo.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="/css/demo.css" />
-    <link rel="stylesheet" type="text/css" href="/css/component.css" />
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="../css/component.css" />
    
 
     <style>
