--- a/demo/readmore/index.html
+++ b/demo/readmore/index.html
@@ -252,7 +252,7 @@
     </style>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="readmore.js"></script>
+<script src="https://ticcix.github.io/js/readmore.js"></script>
 <script>
     $('article').readmore({
         maxHeight: 200,
