--- a/index.html
+++ b/index.html
@@ -40,18 +40,9 @@
 
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link waves-effect" href="#">მთავარი
+                            <a class="nav-link waves-effect" href="/">მთავარი
                             </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="/about.html" >ჩვენს შსახებ</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="/download.html" >უფასო გადმოწერა</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link waves-effect" href="/tutorial.html" >გაკვეთლები</a>
-                        </li>
+                        </li>                    
                     </ul>
 
                     <ul class="navbar-nav nav-flex-icons">
