--- a/demo/istat/index.html
+++ b/demo/istat/index.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Istat V1.0 | Ticcix</title>
 		<link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-boxo/css/bpg-boxo.min.css">
-		<link rel="stylesheet" type="text/css" href="https://ticcix.github.io/css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="https://ticcix.github.io/css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="https://ticcix.github.io/css/component.css" />
+		<link rel="stylesheet" type="text/css" href="../css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="../css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../css/component.css" />
  
         <!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
