--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                                 <div class="btn-group" role="group" aria-label="Basic example">
   <button type="button" class="btn btn-primary  btn-sm" onclick='window.open("https://goo.gl/m4tScS");return false;'>გადმოწერა <i class="fas fa-download ml-2"></i></button>
-  <button type="button" class="btn btn-primary btn-sm" onclick='window.open("https://goo.gl/1ewG1D");return false;'>ინსტრუქცია <i class="far fa-eye ml-2"></i></button>
+  <button type="button" class="btn btn-primary btn-sm" onclick='window.open("https://ticcix.github.io/demo/istat/");return false;'>ინსტრუქცია <i class="far fa-eye ml-2"></i></button>
 </div>
                             </div>
 
