--- a/demo/redirect/index.html
+++ b/demo/redirect/index.html
@@ -66,6 +66,32 @@
     </style>
   </head>
   <body>
+      <!-- Load Facebook SDK for JavaScript -->
+      <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v6.0'
+          });
+        };
+
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+      <!-- Your customer chat code -->
+      <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="880201308661234"
+  theme_color="#303030"
+  logged_in_greeting="გამარჯობა! დახმარება ხომ არ გინდა?"
+  logged_out_greeting="გამარჯობა! დახმარება ხომ არ გინდა?">
+      </div>
     <!-- Page Title-->
     <div class="page-title d-flex page-title-indent-left bg-dark" aria-label="Page title" style="background-image: url(https://i.imgur.com/FqEyoQn.png);">
       <div class="container text-left align-self-center">
