--- a/redirect/index.html
+++ b/redirect/index.html
@@ -169,7 +169,7 @@ display: block;
             <h4 class="mr-3">ინსტრუქცია</h4>
           </div>
           <hr class="pb-4 mb-1">
-          <a href="" class="btn btn-block btn-success btn-style-6 justify-content-between d-flex flex-wrap">გადმოწერა</a>
+          <a href="https://github.com/Ticcix/Redirect" class="btn btn-block btn-success btn-style-6 justify-content-between d-flex flex-wrap">გადმოწერა</a>
         </br>
           <ol>
     <li>ატვირთეთ პლუგინი საიტზე</li>
