--- a/index.html
+++ b/index.html
@@ -26,6 +26,30 @@
   </ul>
 </nav>
 <article id="articles">
+	<div class="item_card" id="item-back">
+  <div class="info_section">
+    <div class="item_header">
+      <div class="locandina"></div>
+      <h1>Documentation Page</h1>
+      <h4>Datalife Engine , Plugins</h4>
+      <span class="minutes">V1.0.1</span>
+      <p class="type">DLE 13.X^, PHP , HTML</p>
+    </div>
+    <div class="item_desc">
+      <p class="text">
+        This is a plugin that helps you show your users the documentation of an article - news - on a separate page. The plugin will be useful for developers.
+      </p>
+    </div>
+    <div class="item_social">
+<ul>
+
+        <li><a href="https://github.com/Ticcix/Documentation_Page"><i class="material-icons  download"></i></a></li>
+        <li><a href="https://ticcix.github.io/Documentation_Page/"><i class="material-icons cogs"></i></a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="blur_back back documentation_page"></div>
+</div>
 <div class="item_card" id="item-back">
   <div class="info_section">
     <div class="item_header">
