--- a/Documentation_Page/index.html
+++ b/Documentation_Page/index.html
@@ -194,11 +194,11 @@ display: block;
         <!-- Inline code-->
         <div class="pb-5">
           <div class="d-flex flex-wrap justify-content-between">
-            <h4 class="mr-3">Demonstration Page</h4>
+            <h4 class="mr-3">Documentation Page</h4>
           </div>
           <hr class="pb-4 mb-1">
          <div class="video">
-<iframe width="560" height="100%" src="https://www.youtube.com/embed/5EEXX7gb4BY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="100%" src="https://youtu.be/5EEXX7gb4BY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
         </div>
         <!-- User input-->
