--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
   <div class="info_section">
     <div class="item_header">
       <div class="locandina"></div>
+      <h1>MyDownloads</h1>
+      <h4>Datalife Engine , Plugins</h4>
+      <span class="minutes">V1.0.1</span>
+      <p class="type">DLE 13.X^, PHP , HTML, Mysql</p>
+    </div>
+    <div class="item_desc">
+      <p class="text">
+        WHEN DEVELOPING A DATALIFE ENGINE SITE I REALIZED THERE WAS NOT A SHORTCODE FOR DISPLAYING THE LOGGED IN USERS AVAILABLE DOWNLOADS OUTSIDE OF THE MY ACCOUNT PAGE. SO I DEVELOPED THIS SIMPLE PLUGIN WHICH ADDS THE SHORT CODE. IT IS SIMPLE AND EFFECTIVE. IT DISPLAYS THE NEWS AND THE FILE NAME IN AN UNORDERED LIST.
+      </p>
+    </div>
+    <div class="item_social">
+<ul>
+
+        <li><a href="https://github.com/Ticcix/MyDownloads"><i class="material-icons  download"></i></a></li>
+        <li><a href="https://ticcix.github.io/MyDownloads/"><i class="material-icons cogs"></i></a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="blur_back back MyDownloads_page"></div>
+</div>
+	<div class="item_card" id="item-back">
+  <div class="info_section">
+    <div class="item_header">
+      <div class="locandina"></div>
       <h1>Documentation Page</h1>
       <h4>Datalife Engine , Plugins</h4>
       <span class="minutes">V1.0.1</span>
