--- a/MyDownloads/index.html
+++ b/MyDownloads/index.html
@@ -252,7 +252,9 @@ display: block;
           <ul class="list-group">
     <li class="list-group-item lang" key="instr1">ატვირთეთ პლუგინი საიტზე</li>
     <li class="list-group-item"><l class="lang" key="instr4">main.tpl-ში </l><code>&lt;head&gt;&lt;/head&gt;</code><lang class="lang" key="instr3"> მოათავსეთ</lang> <br><pre class="language-markup"><code>  &lt;link href="{THEME}/ticcix/assets/css/styles.css" type="text/css" rel="stylesheet"&gt;
-</code></pre></li>
+</code></pre>
+<code>{AJAX}<\code> <lang class="lang" kay="instr8"><\lang> <code>{ALERT}<\code>
+</li>
     <li  class="list-group-item lang" key="instr2">attachment.tpl მოათავსეთ შემდეგი კოდი</li>
     <pre class="language-markup"><code>&lt;form method="POST" action=""&gt;
   &lt;input name="name" type="hidden" value="{name}"/&gt;
