--- a/MyDownloads/index.html
+++ b/MyDownloads/index.html
@@ -35,6 +35,7 @@
     arrLang['en']['instr5'] = 'You can also use this code on online tracks to do this';
     arrLang['en']['instr6'] = 'Expect further in case of download';
     arrLang['en']['instr7'] = 'X - your extra field name';
+    arrLang['en']['instr8'] = 'After';
     arrLang['en']['download'] = 'Download';
     arrLang['en']['links'] = 'Material used';
     arrLang['en']['link'] = 'My Download Page';
@@ -56,6 +57,7 @@
     arrLang['ka']['instr5'] = 'ასევე შეგიძლიათ გამოიყენოთ ეს კოდი ონლაინ საჩვენებელ ფაილებზე ამისათვის';
     arrLang['ka']['instr6'] = 'დამატებით ველით გადმოწერის შემთხვევაში';
     arrLang['ka']['instr7'] = 'X - თქვენი დამატებით ველი';
+    arrLang['ka']['instr8'] = 'ქვემოთ';
     $(function() {
       $('.translate').click(function() {
         var lang = $(this).attr('id');
@@ -253,7 +255,7 @@ display: block;
     <li class="list-group-item lang" key="instr1">ატვირთეთ პლუგინი საიტზე</li>
     <li class="list-group-item"><l class="lang" key="instr4">main.tpl-ში </l><code>&lt;head&gt;&lt;/head&gt;</code><lang class="lang" key="instr3"> მოათავსეთ</lang> <br><pre class="language-markup"><code>  &lt;link href="{THEME}/ticcix/assets/css/styles.css" type="text/css" rel="stylesheet"&gt;
 </code></pre>
-<code>{AJAX}<\code> <lang class="lang" kay="instr8"><\lang> <code>{ALERT}<\code>
+<code>{AJAX}<\code> <lang class="lang" kay="instr8">შემდეგ<\lang> <code>{ALERT}<\code>
 </li>
     <li  class="list-group-item lang" key="instr2">attachment.tpl მოათავსეთ შემდეგი კოდი</li>
     <pre class="language-markup"><code>&lt;form method="POST" action=""&gt;
