--- a/MyDownloads/index.html
+++ b/MyDownloads/index.html
@@ -70,7 +70,7 @@
   </script>
 
     <style type="text/css">
-  body, .mr-3 , h1 , code , pre {
+  body, .mr-3 , h1 {
 
     font-family: "BPG Arial Caps", sans-serif;
   }
