--- a/MyDownloads/index.html
+++ b/MyDownloads/index.html
@@ -68,8 +68,12 @@
       });
     });
   </script>
-
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
+	code, pre {font-family: 'Source Code Pro', monospace;}
+</style>
     <style type="text/css">
+	 
   body, .mr-3 , h1 {
 
     font-family: "BPG Arial Caps", sans-serif;
