--- a/MyDownloads/index.html
+++ b/MyDownloads/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/2UKZo8V.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-arial-caps/css/bpg-arial-caps.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -69,8 +70,7 @@
     });
   </script>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
-	code, pre {font-family: 'Source Code Pro', monospace;}
+	.language-markup, code, pre {font-family: 'Source Code Pro', monospace;}
 </style>
     <style type="text/css">
 	 
