--- a/Documentation_Page/index.html
+++ b/Documentation_Page/index.html
@@ -44,8 +44,8 @@
     arrLang['en']['instr11'] = 'Meta keywords in the article';
     arrLang['en']['instr12'] = 'RewriteEngine On - below';
     arrLang['en']['instr13'] = 'Place';
-    arrLang['ka']['instr112'] = 'There must be additional fields ';
-    arrLang['ka']['instr113'] = 'You can use:';
+    arrLang['en']['instr112'] = 'There must be additional fields ';
+    arrLang['en']['instr113'] = 'You can use:';
     arrLang['ka']['menuinfo'] = 'ინფორმაცია';
     arrLang['ka']['menuintr'] = 'ინსტრუქცია';
     arrLang['ka']['page-title-heading'] = 'პლაგინის მიმოხილვა & ინსტალაცია';
