--- a/Documentation_Page/index.html
+++ b/Documentation_Page/index.html
@@ -226,7 +226,7 @@ display: block;
           </div>
           <hr class="pb-4 mb-1">
          <div class="video">
-<iframe width="560" height="100%" src="https://www.youtube.com/watch?v=5EEXX7gb4BY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="100%" src="https://www.youtube.com/embed/5EEXX7gb4BY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
         </div>
         <!-- User input-->
