--- a/index.html
+++ b/index.html
@@ -209,5 +209,6 @@ The link will be redirected to your/gO/? Additional field
 		//call paginate
 		$('#articles').paginate();
 	</script>
+	<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6eabc34528752523d5079f77e/6147940775e245701a8dd11ea.js");</script>
 </body>
 </html>
