--- a/index.html
+++ b/index.html
@@ -26,6 +26,30 @@
   </ul>
 </nav>
 <article id="articles">
+  <div class="item_card" id="item-back">
+  <div class="info_section">
+    <div class="item_header">
+      <div class="locandina"></div>
+      <h1>Toast Notification</h1>
+      <h4>HTML</h4>
+      <span class="minutes">V1.0.1</span>
+      <p class="type">Javascript , Bootstrap , Alert</p>
+    </div>
+    <div class="item_desc">
+      <p class="text">
+       In this post, you will learn how to make a Toast Notification for Detect Internet Connection status using javascript, HTML and Bootstrap 4 Toast component. In this tutorial, we will use javascript and Bootstrap 4 library for display internet connection status. In web development display of push notification regarding Internet connection status feature is very useful, because in this middle of surfing website and suddenly internet connection lost, then at that time this push toast notification is very effective for display of internet connection status on web page.
+      </p>
+    </div>
+    <div class="item_social">
+<ul>
+
+        <li><a href="https://github.com/Ticcix/toast-Notification-for-Check-Internet-Connection-with-Bootstrap-4-javascript"><i class="material-icons  download"></i></a></li>
+        <li><a href="https://ticcix.github.io/toast_demo/"><i class="material-icons cogs"></i></a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="blur_back back toast"></div>
+</div>
 	<div class="item_card" id="item-back">
   <div class="info_section">
     <div class="item_header">
@@ -209,6 +233,5 @@ The link will be redirected to your/gO/? Additional field
 		//call paginate
 		$('#articles').paginate();
 	</script>
-	<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6eabc34528752523d5079f77e/6147940775e245701a8dd11ea.js");</script>
 </body>
 </html>
