--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="item_desc">
       <p class="text">
-       In this post, you will learn how to make a Toast Notification for Detect Internet Connection status using javascript, HTML and Bootstrap 4 Toast component. In this tutorial, we will use javascript and Bootstrap 4 library for display internet connection status. In web development display of push notification regarding Internet connection status feature is very useful, because in this middle of surfing website and suddenly internet connection lost, then at that time this push toast notification is very effective for display of internet connection status on web page.
+       Toast Notification for Detect Internet Connection status using javascript, HTML and Bootstrap 4 Toast component. Toast notification is very effective for display of internet connection status on web page.
       </p>
     </div>
     <div class="item_social">
