--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Ticcix</title>
+  <meta charset="utf-8">
+  <title>Ticcix</title>
     <meta name="description" content="Ticcix Web Dewelopmant Github">
     <meta name="keywords" content="multipurpose, portfolio, blog, shop, e-commerce, modern, flat style, responsive,  business, corporate, mobile, bootstrap 4, html5, css3, jquery, js, gallery, slider, touch, creative, clean">
     <meta name="author" content="Ticcix">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="https://i.imgur.com/2UKZo8V.png">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 <body>
 
-	<nav class="menu" tabindex="0">
-	<div class="smartphone-menu-trigger"></div>
+  <nav class="menu" tabindex="0">
+  <div class="smartphone-menu-trigger"></div>
   <header class="avatar">
-		<img src="https://i.imgur.com/2UKZo8V.png" />
+    <img src="https://i.imgur.com/2UKZo8V.png" />
   </header>
-	<ul>
+  <ul>
     <a href="https://github.com/Ticcix/"><li tabindex="0" class="icon-github"><span>GitHub</span></li></a>
     <a href="https://www.facebook.com/ticcix"><li tabindex="0" class="icon-facebook"><span>Facebook</span></li></a>
     <a href="https://www.youtube.com/user/ticcixx"><li tabindex="0" class="icon-youtube"><span>Youtube</span></li></a>
@@ -26,6 +26,30 @@
   </ul>
 </nav>
 <article id="articles">
+   <div class="item_card" id="item-back">
+  <div class="info_section">
+    <div class="item_header">
+      <div class="locandina"></div>
+      <h1>Fancybox For Dle</h1>
+      <h4>Datalife Engine , Plugins</h4>
+      <span class="minutes">V1.0.1</span>
+      <p class="type">DLE 13.X^, PHP , HTML, Mysql</p>
+    </div>
+    <div class="item_desc">
+      <p class="text">
+       The hack allows you to replace the standard functionality of increasing the image in DLE - from Highslide to FancyBox. Works for additional fields too.
+      </p>
+    </div>
+    <div class="item_social">
+<ul>
+
+        <li><a href="https://github.com/Ticcix/fancyboxfordle"><i class="material-icons  download"></i></a></li>
+       
+      </ul>
+    </div>
+  </div>
+  <div class="blur_back back toast"></div>
+</div>
   <div class="item_card" id="item-back">
   <div class="info_section">
     <div class="item_header">
@@ -50,7 +74,7 @@
   </div>
   <div class="blur_back back toast"></div>
 </div>
-	<div class="item_card" id="item-back">
+  <div class="item_card" id="item-back">
   <div class="info_section">
     <div class="item_header">
       <div class="locandina"></div>
@@ -74,7 +98,7 @@
   </div>
   <div class="blur_back back MyDownloads_page"></div>
 </div>
-	<div class="item_card" id="item-back">
+  <div class="item_card" id="item-back">
   <div class="info_section">
     <div class="item_header">
       <div class="locandina"></div>
@@ -147,7 +171,7 @@ The module, connected through the DLE plug-in installation system, displays a wi
   </div>
   <div class="blur_back back live_chat"></div>
 </div>
-	<div class="item_card" id="item-back">
+  <div class="item_card" id="item-back">
   <div class="info_section">
     <div class="item_header">
       <div class="locandina"></div>
@@ -226,12 +250,12 @@ The link will be redirected to your/gO/? Additional field
 
 </article>
   <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="js/jquery.paginate.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+  <script src="js/jquery.paginate.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 
-	<script>
-		//call paginate
-		$('#articles').paginate();
-	</script>
+  <script>
+    //call paginate
+    $('#articles').paginate();
+  </script>
 </body>
 </html>
