--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </ul>
     </div>
   </div>
-  <div class="blur_back back toast"></div>
+  <div class="blur_back back fancyboxfordle"></div>
 </div>
   <div class="item_card" id="item-back">
   <div class="info_section">
