--- a/Documentation_Page/index.html
+++ b/Documentation_Page/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="multipurpose, portfolio, blog, shop, e-commerce, modern, flat style, responsive,  business, corporate, mobile, bootstrap 4, html5, css3, jquery, js, gallery, slider, touch, creative, clean">
     <meta name="author" content="Ticcix">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/2UKZo8V.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/JNmPlT9.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-arial-caps/css/bpg-arial-caps.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
