--- a/Documentation_Page/index.html
+++ b/Documentation_Page/index.html
@@ -116,8 +116,6 @@
     font-family: "BPG Arial Caps", sans-serif;
   }
 .logo {
-    font-size: 45px;
-    font-family: 'Nunito';
      -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -125,42 +123,6 @@
   top: -12px;
 }
 
-.logo:before {
-    content: 'TICCI';
-    color: #303030;
-   font-family: 'Nunito';
-   top: 7.5%;
-  margin:0;
-  position: absolute;
-
-
-}
-.logo::after {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  width: 30%;
-  height: 100%;
-  position: absolute;
-  content: "";
-  top: -36.2%;
-  right: 110px;
-  left: 119px;
-  margin: -7px 0 0 2px;
-  border: none;
-  background: url("https://i.imgur.com/2UKZo8V.png");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  -webkit-background-origin: padding-box;
-  background-origin: padding-box;
-  -webkit-background-clip: border-box;
-  background-clip: border-box;
-  -webkit-background-size: 55px auto;
-  background-size: 55px auto;
-  text-shadow: none;
-
-
-}
 .video {
   width: 100%;
   height: 450px;
@@ -191,7 +153,7 @@ display: block;
     <!-- Off-Canvas Container-->
     <div class="offcanvas-container is-static" id="sidebarComponents"><span class="offcanvas-close"><i class="fe-icon-x"></i></span>
       <div class="d-flex align-items-center px-4">
-      <div class="logo"></div>
+      <div class="logo"><img src="https://i.imgur.com/LJOhHy3.png" alt="Ticcix"></div>
       </div>
       <div class="offcanvas-scrollable-area" style="top: 139px; height: calc(100% - 250px);">
         <nav class="list-group list-group-flush" id="components-list">
