--- a/download_page/index.html
+++ b/download_page/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="multipurpose, portfolio, blog, shop, e-commerce, modern, flat style, responsive,  business, corporate, mobile, bootstrap 4, html5, css3, jquery, js, gallery, slider, touch, creative, clean">
     <meta name="author" content="Ticcix">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/2UKZo8V.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/JNmPlT9.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-banner-quadrosquare-caps/css/bpg-banner-quadrosquare-caps.min.css">
 
@@ -18,8 +18,7 @@
     font-family: 'BPG Banner QuadroSquare Caps';
   }
 .logo {
-    font-size: 45px;
-    font-family: 'Nunito';
+  
      -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -27,41 +26,7 @@
   top: -12px;
 }
 
-.logo:before {
-    content: 'TICCI';
-    color: #303030;
-   font-family: 'Nunito';
-   top: 7.5%;
-  margin:0;
-  position: absolute;
 
-
-}
-.logo::after {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  width: 30%;
-  height: 100%;
-  position: absolute;
-  content: "";
-  top: -36.2%;
-  right: 110px;
-  left: 119px;
-  margin: -7px 0 0 2px;
-  border: none;
-  background: url("https://i.imgur.com/2UKZo8V.png");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  -webkit-background-origin: padding-box;
-  background-origin: padding-box;
-  -webkit-background-clip: border-box;
-  background-clip: border-box;
-  -webkit-background-size: 55px auto;
-  background-size: 55px auto;
-  text-shadow: none;
-
-     
 }
 .plazma {
   width: 100%;
@@ -153,7 +118,7 @@ display: block;
     </div>
     <div class="offcanvas-container is-static" id="sidebarComponents"><span class="offcanvas-close"><i class="fe-icon-x"></i></span>
       <div class="d-flex align-items-center px-4">
-      <div class="logo"></div>
+      <div class="logo"><img src="https://i.imgur.com/LJOhHy3.png" alt="Ticcix"></div>
       </div>
       <div class="offcanvas-scrollable-area" style="top: 139px; height: calc(100% - 250px);">
         <nav class="list-group list-group-flush" id="components-list">
